index.html Updated

--- a/index.html
+++ b/index.html
@@ -1,16 +1,33 @@
 <!doctype html>
 <html lang="en">
   <head>
-    <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="favicon.ico" />
+    <link rel="icon" href="favicon.ico" />
+    <link rel="apple-touch-icon" href="favicon.ico" />
+    <!-- Meta Tags-->
+    <meta http-equiv="content-type" content="text/html; charset=utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta name="keywords" content="UgoEat, UgoEat Online, Online, Manger, Commandez, Restaurant, en ligne, Restauration en Ligne" />
+    <meta name="description" content="Le Meilleur site de restauration en ligne."/>
+    <meta name="author" content="UGOEAT ONLINE"/>
+    <!-- meta:og properties -->
+    <meta property="og:site_name" content="UGOEAT ONLINE"/>
+    <meta property="og:description" content="Le Meilleur site de restauration en ligne."/>
+    <meta property="og:title" content="Acceuil | UGOEAT"/>
+    <meta property="og:image" content="./assets/images/home-order-map.png" />
+    <!-- end -->
     <title>UGOEAT</title>
+    <!-- STYLE -->
     <style>
-
+      @font-face {
+        font-family: 'poppins';
+        src: url("./assets/fonts/poppins/Poppins-Regular.ttf") format('truetype');
+        font-style: normal;
+      }
     </style>
+    <!-- END -->
   </head>
   <body>
     <div id="root"></div>
-    <script type="module" src="/src/main.jsx"></script>
+    <script type="module" src="/src/main.jsx" defer></script>
   </body>
 </html>
