placement des assets dans static.ugoeatonline.com/assets

--- a/index.html
+++ b/index.html
@@ -13,14 +13,14 @@
     <meta property="og:site_name" content="UGOEAT ONLINE"/>
     <meta property="og:description" content="Le Meilleur site de restauration en ligne."/>
     <meta property="og:title" content="Acceuil | UGOEAT"/>
-    <meta property="og:image" content="./assets/images/home-order-map.png" />
+    <meta property="og:image" content="static.ugoeatonline.com/assets/images/home-order-map.png" />
     <!-- end -->
     <title>UGOEAT</title>
     <!-- STYLE -->
     <style>
       @font-face {
         font-family: 'poppins';
-        src: url("./assets/fonts/poppins/Poppins-Regular.ttf") format('truetype');
+        src: url("static.ugoeatonline.com/assets/fonts/poppins/Poppins-Regular.ttf") format('truetype');
         font-style: normal;
       }
     </style>
