Mise a jour dynamique du meta[property=og:title] pour les routes login, register, about, orders, ''

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <!-- meta:og properties -->
     <meta property="og:site_name" content="UGOEAT ONLINE"/>
     <meta property="og:description" content="Le Meilleur site de restauration en ligne."/>
-    <meta property="og:title" content="Acceuil | UGOEAT"/>
+    <meta property="og:title" content="Acceuil"/>
     <meta property="og:image" content="static.ugoeatonline.com/assets/images/home-order-map.png" />
     <!-- end -->
     <title>UGOEAT</title>
