Implementation des interfaces UsersListView & UserDialogView

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
     <style>
       @font-face {
         font-family: 'poppins';
-        src: url("static.ugoeatonline.com/assets/fonts/poppins/Poppins-Regular.ttf") format('truetype');
+        src: url("/static.ugoeatonline.com/assets/fonts/poppins/Poppins-Regular.ttf") format('truetype');
         font-style: normal;
       }
     </style>
